--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -9,3 +9,21 @@
   color: @color-black;
   background-color: @color-light-grey;
 }
+
+.button:hover {
+  background-color: #5eaa2f;
+}
+
+.button:disabled {
+  background-color: #5eaa2f;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button--theme-grey:hover {
+  background-color: #ebebeb;
+}
+
+.button--theme-grey:disabled {
+  background-color: #ebebeb;
+  color: rgba(68, 68, 68, 0.3);
+}
