--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -8,7 +8,9 @@
 }
 
 .page-header__logo {
-  display: inline-block;
+  display: flex;
+  align-items: flex-start;
+  text-decoration: none;
 }
 
 .page-header__logo-image-icon {
