--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -9,6 +9,14 @@
   text-decoration: none;
 }
 
+.site-list__link:hover {
+  opacity: 0.6;
+}
+
+.site-list__link:disabled {
+  opacity: 0.3;
+}
+
 .site-list__item {
   padding-top: 24px;
   padding-bottom: 21px;
