--- a/source/less/blocks/banner-wrap.less
+++ b/source/less/blocks/banner-wrap.less
@@ -11,7 +11,7 @@
       position: absolute;
       top: 0;
       left: calc(~"50% + 40px");
-      width: 50%;
+      width: calc(~"50% - 40px");
       height: 100%;
       background-color: #63a73a;
     }
