--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -9,10 +9,25 @@
   margin-bottom: 28px;
 }
 
+.catalog-item {
+  padding: 0 20px;
+}
+
 @media (min-width: @tablet-width) {
   .catalog-main__heading-page {
     margin: 53px 0 163px 30px;
     font-size: 60px;
+  }
+
+  .catalog__item {
+    width: 324px;
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .catalog__item:not(:last-of-type) {
+    background-color: #f2f2f2;
   }
 
   .catalog-main__wrapper-additional-products {
@@ -23,6 +38,10 @@
 @media (min-width: @desktop-width) {
   .catalog-main__heading-page {
     margin: 72px 0 163px 40px;
+  }
+
+  .catalog__item {
+    width: 245px;
   }
 
   .catalog-main__wrapper-additional-products {
