--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -16,6 +16,7 @@
   width: 200px;
   margin: 0 auto;
   padding-top: 185px;
+  padding-left: 40px;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
