--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,7 @@
 @import "blocks/label";
 @import "blocks/input";
 @import "blocks/radio";
+@import "blocks/textarea";
 @import "blocks/checkbox";
 @import "blocks/banner-wrap";
 @import "blocks/page-header";
@@ -28,3 +29,4 @@
 @import "blocks/promo";
 @import "blocks/program-form-main";
 @import "blocks/picking-program";
+@import "blocks/program-order";
