--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -9,7 +9,7 @@
 
 .page-header__logo {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   text-decoration: none;
 }
 
@@ -21,7 +21,7 @@
 .page-header__logo-image-name {
   width: 101px;
   height: 18px;
-  padding-bottom: 7px;
+  padding-top: 20px;
   margin-left: 53px;
 }
 
