--- a/source/less/blocks/radio.less
+++ b/source/less/blocks/radio.less
@@ -32,12 +32,12 @@
 }
 
 .radio__control:checked ~ .radio__label::before {
-  background-color: #68b738;
+  border-color: #68b738;
 }
 
 .radio__control:disabled ~ .radio__label {
   opacity: 0.3;
-  background-color: #bababa;
+  border-color: #bababa;
 }
 
 @media screen and (min-width: @tablet-width) {
