--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -47,6 +47,11 @@
   background-color: @color-green;
 }
 */
+.picking-program__wrapper-button {
+  width: 280px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
 .picking-program__button {
   width: 100%;
   padding: 10px 0 10px 0;
@@ -69,35 +74,16 @@
 
 @media screen and (min-width: @tablet-width) {
   .picking-program {
-    padding: 0 30px;
+    padding: 0 30px 0 30px;
   }
 
   .picking-program__text {
     width: 328px;
-    padding-top: 32px;
-    padding-left: 40px;
     font-size: 20px;
+    padding-left: 40px;
     line-height: 30px;
   }
-/*
-  .picking-program__legend-contacts::before {
-    bottom: 40px;
-    left: -40px;
-    width: 768px;
-  }
 
-  .picking-program__legend-comment::before {
-    bottom: 40px;
-    left: -40px;
-    width: 768px;
-  }
-
-  .picking-program__legend-additionally::before {
-    bottom: 40px;
-    left: -40px;
-    width: 768px;
-  }
-*/
   .picking-program__button {
     width: 282px;
     padding: 15px 0;
@@ -111,13 +97,9 @@
 }
 
 @media screen and (min-width: @desktop-width) {
-  .picking-program {
-    padding: 0 40px;
-  }
-
   .picking-program__text {
     width: 328px;
-    padding-left: 10px;
+    padding: 0;
     font-size: 20px;
     line-height: 30px;
   }
